# WszebiPatientPortal

./: .coveragerc  .dockerignore  .env.dist  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
.docker/compose/: start
.elasticbeanstalk/: config.yml
.github/workflows/: WszebiPatientPortal-CI.yml
appointments/: admin.py  factories.py  filters.py  forms.py  models.py  urls.py  views.py
appointments/management/commands/: create_permission_groups.py  populate_db.py  t.py
appointments/migrations/: 0001_initial.py  0002_alter_appointment_doctor_alter_appointment_notes_and_more.py  0002_initial.py
appointments/services/: date_parser.py  doctor_schedule.py  email_utils.py
appointments/templates/appointments/: appointment_confirm.html  appointment_confirm_delete.html  appointment_form.html  appointment_list.html  appointment_list2.html  appointment_note_detail.html  appointment_note_form.html  base.html  doctor_appointments.html  main.html  schedule_calendar.html  schedule_confirm_delete.html  schedule_form.html  user_appointments.html
appointments/tests/: test_date_parser.py  test_doctor_schedule.py  test_email_utils.py  test_factories.py  test_filters.py  test_forms.py  test_views.py
core/: celery.py  env.py  settings.py  urls.py
core/tests/: test_celery.py
schedules/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
schedules/migrations/: 0001_initial.py  0002_initial.py
schedules/services/: schedule_clearing.py
schedules/templates/schedules/: schedule_calendar.html  schedule_confirm_delete.html  schedule_form.html
schedules/tests/: test_factories.py  test_forms.py  test_schedule_clearing.py  test_views.py
static/assets/css/: main.css
static/assets/js/: main.js
static/assets/scss/: Readme.txt
users/: admin.py  factories.py  forms.py  middleware.py  models.py  models2.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py
users/services/: perm_assign.py  permissions_in_groups.py
users/templates/users/: choose_user_role.html  department_list.html  doctor_details.html  doctor_list.html  login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html  (+2 more)
users/tests/: test_factories.py  test_forms.py  test_middleware.py  test_perm_assign.py  test_permission_in_groups.py  test_views.py
(+2 files in other folders)
