[tool.poetry]
name = "wszebipatientportal"
version = "0.1.0"
description = "App for booking appointments for doctor"
authors = ["wszeborj <wszeborj@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.10"
django-bootstrap-datepicker-plus = "^5.0.5"
pillow = "^11.0.0"
django-bootstrap4 = "^24.4"


[tool.poetry.group.dev.dependencies]
poetry = "^1.8.4"
pre-commit = "^4.0.1"
sentry-sdk = "^2.19.0"
bandit = "^1.8.0"
ruff = "^0.8.1"
safety = "^3.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
